build/log/idf_py_stdout_output_16640
[1/12] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D F:\Bijesh\ESP_Workspace\ESP32_FC\build\bootloader\esp-idf\esptool_py && python F:/softwares/Espressif/esp-idf-v5.2.1/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 F:/Bijesh/ESP_Workspace/ESP32_FC/build/bootloader/bootloader.bin"
Bootloader binary size 0x6150 bytes. 0xeb0 bytes (13%) free.
[2/10] Building C object esp-idf/fcDSP/CMakeFiles/__idf_fcDSP.dir/fft.c.obj
FAILED: esp-idf/fcDSP/CMakeFiles/__idf_fcDSP.dir/fft.c.obj 
ccache F:\softwares\Espressif-new\tools\xtensa-esp-elf\esp-13.2.0_20230928\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"HEAD-HASH-NOTFOUND\" -DNDEBUG -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IF:/Bijesh/ESP_Workspace/ESP32_FC/build/config -IF:/Bijesh/ESP_Workspace/ESP32_FC/fc/fcDSP/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/newlib/platform_include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/freertos/config/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/freertos/config/include/freertos -IF:/softwares/Espressif/esp-idf-v5.2.1/components/freertos/config/xtensa/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/freertos/FreeRTOS-Kernel/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IF:/softwares/Espressif/esp-idf-v5.2.1/components/freertos/esp_additions/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/esp_hw_support/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/esp_hw_support/include/soc -IF:/softwares/Espressif/esp-idf-v5.2.1/components/esp_hw_support/include/soc/esp32 -IF:/softwares/Espressif/esp-idf-v5.2.1/components/esp_hw_support/port/esp32/. -IF:/softwares/Espressif/esp-idf-v5.2.1/components/heap/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/log/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/soc/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/soc/esp32 -IF:/softwares/Espressif/esp-idf-v5.2.1/components/soc/esp32/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/hal/platform_port/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/hal/esp32/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/hal/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/esp_rom/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/esp_rom/include/esp32 -IF:/softwares/Espressif/esp-idf-v5.2.1/components/esp_rom/esp32 -IF:/softwares/Espressif/esp-idf-v5.2.1/components/esp_common/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/esp_system/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/esp_system/port/soc -IF:/softwares/Espressif/esp-idf-v5.2.1/components/esp_system/port/include/private -IF:/softwares/Espressif/esp-idf-v5.2.1/components/xtensa/esp32/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/xtensa/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/xtensa/deprecated_include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/lwip/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/lwip/include/apps -IF:/softwares/Espressif/esp-idf-v5.2.1/components/lwip/include/apps/sntp -IF:/softwares/Espressif/esp-idf-v5.2.1/components/lwip/lwip/src/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/lwip/port/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/lwip/port/freertos/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/lwip/port/esp32xx/include -IF:/softwares/Espressif/esp-idf-v5.2.1/components/lwip/port/esp32xx/include/arch -IF:/softwares/Espressif/esp-idf-v5.2.1/components/lwip/port/esp32xx/include/sys -IF:/Bijesh/ESP_Workspace/ESP32_FC/fc/fcUtil/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -O2 -fmacro-prefix-map=F:/Bijesh/ESP_Workspace/ESP32_FC=. -fmacro-prefix-map=F:/softwares/Espressif/esp-idf-v5.2.1=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/fcDSP/CMakeFiles/__idf_fcDSP.dir/fft.c.obj -MF esp-idf\fcDSP\CMakeFiles\__idf_fcDSP.dir\fft.c.obj.d -o esp-idf/fcDSP/CMakeFiles/__idf_fcDSP.dir/fft.c.obj -c F:/Bijesh/ESP_Workspace/ESP32_FC/fc/fcDSP/fft.c
F:/Bijesh/ESP_Workspace/ESP32_FC/fc/fcDSP/fft.c: In function 'updateFFT':
F:/Bijesh/ESP_Workspace/ESP32_FC/fc/fcDSP/fft.c:105:47: error: incompatible type for argument 1 of 'lowPassFilterUpdate'
  105 |         float sample = lowPassFilterUpdate(ctx->lpfSample, origSample,ctx->fftDt);
      |                                            ~~~^~~~~~~~~~~
      |                                               |
      |                                               LOWPASSFILTER {aka struct _LOWPASSFILTER}
In file included from F:/Bijesh/ESP_Workspace/ESP32_FC/fc/fcDSP/include/fft.h:8,
                 from F:/Bijesh/ESP_Workspace/ESP32_FC/fc/fcDSP/fft.c:1:
F:/Bijesh/ESP_Workspace/ESP32_FC/fc/fcDSP/include/lowPassFilter.h:19:42: note: expected 'LOWPASSFILTER *' {aka 'struct _LOWPASSFILTER *'} but argument is of type 'LOWPASSFILTER' {aka 'struct _LOWPASSFILTER'}
   19 | float lowPassFilterUpdate(LOWPASSFILTER *self, float data, float dt);
      |                           ~~~~~~~~~~~~~~~^~~~
ninja: build stopped: subcommand failed.
